[scheduler] Reintroduce concept of pausing timers for Android WebView.

Android WebView has an API to pause timers and we have to support it
for the time being because changing WebView API and CTS tests is hard.

This patch relands parts of
https://chromium-review.googlesource.com/c/chromium/src/+/702356.

R=alexclarke@chromium.org,skyostil@chromium.org,jochen@chromium.org,yolandyan@chromium.org
BUG=773848

Change-Id: I728961bc4852ccefc9d5cc0ce45c872cd6dd840e
Reviewed-on: https://chromium-review.googlesource.com/718939
Reviewed-by: Jochen Eisinger <jochen@chromium.org>
Reviewed-by: Yoland Yan <yolandyan@chromium.org>
Reviewed-by: Bo <boliu@chromium.org>
Reviewed-by: Alex Clarke <alexclarke@chromium.org>
Reviewed-by: Sami Kyöstilä <skyostil@chromium.org>
Commit-Queue: Alexander Timin <altimin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#509504}
Former-commit-id: 4b61522379090f524b8c56d7ce4e9481f42beebd