third_party/WebKit/Source/platform/scheduler/renderer/renderer_scheduler_impl.cc
@@ -13,6 +13,7 @@
 #include "base/threading/thread_task_runner_handle.h"
 #include "base/trace_event/trace_event.h"
 #include "base/trace_event/trace_event_argument.h"
+#include "build/build_config.h"
 #include "components/viz/common/frame_sinks/begin_frame_args.h"
 #include "platform/instrumentation/resource_coordinator/BlinkResourceCoordinatorBase.h"
 #include "platform/instrumentation/resource_coordinator/RendererResourceCoordinator.h"
@@ -194,20 +195,18 @@ RendererSchedulerImpl::MainThreadOnly::MainThreadOnly(
                           time_source,
                           kShortIdlePeriodDurationSampleCount,
                           kShortIdlePeriodDurationPercentile),
-      current_use_case(
-          UseCase::NONE,
-          "RendererScheduler.UseCase",
-          renderer_scheduler_impl,
-          UseCaseToString),
+      current_use_case(UseCase::NONE,
+                       "RendererScheduler.UseCase",
+                       renderer_scheduler_impl,
+                       UseCaseToString),
       renderer_pause_count(0),
       navigation_task_expected_count(0),
       expensive_task_policy(ExpensiveTaskPolicy::RUN),
       renderer_hidden(false),
-      renderer_backgrounded(
-          false,
-          "RendererScheduler.Backgrounded",
-          renderer_scheduler_impl,
-          BackgroundStateToString),
+      renderer_backgrounded(false,
+                            "RendererScheduler.Backgrounded",
+                            renderer_scheduler_impl,
+                            BackgroundStateToString),
       stopping_when_backgrounded_enabled(false),
       stopped_when_backgrounded(false),
       was_shutdown(false),
@@ -216,16 +215,14 @@ RendererSchedulerImpl::MainThreadOnly::MainThreadOnly(
           "RendererScheduler.LoadingTasksSeemsExpensive",
           renderer_scheduler_impl,
           YesNoStateToString),
-      timer_tasks_seem_expensive(
-          false,
-          "RendererScheduler.TimerTasksSeemsExpensive",
-          renderer_scheduler_impl,
-          YesNoStateToString),
-      touchstart_expected_soon(
-          false,
-          "RendererScheduler.TouchstartExpectedSoon",
-          renderer_scheduler_impl,
-          YesNoStateToString),
+      timer_tasks_seem_expensive(false,
+                                 "RendererScheduler.TimerTasksSeemsExpensive",
+                                 renderer_scheduler_impl,
+                                 YesNoStateToString),
+      touchstart_expected_soon(false,
+                               "RendererScheduler.TouchstartExpectedSoon",
+                               renderer_scheduler_impl,
+                               YesNoStateToString),
       have_seen_a_begin_main_frame(false),
       have_reported_blocking_intervention_in_current_policy(false),
       have_reported_blocking_intervention_since_navigation(false),
@@ -233,14 +230,14 @@ RendererSchedulerImpl::MainThreadOnly::MainThreadOnly(
       begin_frame_not_expected_soon(false),
       in_idle_period_for_testing(false),
       use_virtual_time(false),
-      is_audio_playing(
-          false,
-          "RendererScheduler.AudioPlaying",
-          renderer_scheduler_impl,
-          AudioPlayingStateToString),
+      is_audio_playing(false,
+                       "RendererScheduler.AudioPlaying",
+                       renderer_scheduler_impl,
+                       AudioPlayingStateToString),
       compositor_will_send_main_frame_not_expected(false),
       virtual_time_stopped(false),
       has_navigated(false),
+      pause_timers_for_webview(false),
       background_status_changed_at(now),
       rail_mode_observer(nullptr),
       wake_up_budget_pool(nullptr),
@@ -614,6 +611,18 @@ void RendererSchedulerImpl::SetRendererBackgrounded(bool backgrounded) {
     main_thread_only().metrics_helper.OnRendererForegrounded(now);
   }
 }
+
+#if defined(OS_ANDROID)
+void RendererSchedulerImpl::PauseTimersForAndroidWebView() {
+  main_thread_only().pause_timers_for_webview = true;
+  UpdatePolicy();
+}
+
+void RendererSchedulerImpl::ResumeTimersForAndroidWebView() {
+  main_thread_only().pause_timers_for_webview = false;
+  UpdatePolicy();
+}
+#endif
 
 void RendererSchedulerImpl::OnAudioStateChanged() {
   bool is_audio_playing = false;
@@ -1193,6 +1202,9 @@ void RendererSchedulerImpl::UpdatePolicyLocked(UpdateType update_type) {
   }
   if (main_thread_only().renderer_pause_count) {
     new_policy.loading_queue_policy().is_paused = true;
+    new_policy.timer_queue_policy().is_paused = true;
+  }
+  if (main_thread_only().pause_timers_for_webview) {
     new_policy.timer_queue_policy().is_paused = true;
   }
 
