third_party/WebKit/Source/platform/scheduler/renderer/renderer_scheduler_impl.h
@@ -13,6 +13,7 @@
 #include "base/single_thread_task_runner.h"
 #include "base/synchronization/lock.h"
 #include "base/trace_event/trace_log.h"
+#include "build/build_config.h"
 #include "device/base/synchronization/shared_memory_seqlock_buffer.h"
 #include "platform/PlatformExport.h"
 #include "platform/scheduler/base/pollable_thread_safe_flag.h"
@@ -111,6 +112,10 @@ class PLATFORM_EXPORT RendererSchedulerImpl
   void DidAnimateForInputOnCompositorThread() override;
   void SetRendererHidden(bool hidden) override;
   void SetRendererBackgrounded(bool backgrounded) override;
+#if defined(OS_ANDROID)
+  void PauseTimersForAndroidWebView();
+  void ResumeTimersForAndroidWebView();
+#endif
   std::unique_ptr<RendererPauseHandle> PauseRenderer() override
       WARN_UNUSED_RESULT;
   void AddPendingNavigation(NavigatingFrameType type) override;
@@ -602,6 +607,7 @@ class PLATFORM_EXPORT RendererSchedulerImpl
     bool compositor_will_send_main_frame_not_expected;
     bool virtual_time_stopped;
     bool has_navigated;
+    bool pause_timers_for_webview;
     std::unique_ptr<base::SingleSampleMetric> max_queueing_time_metric;
     base::TimeDelta max_queueing_time;
     base::TimeTicks background_status_changed_at;
